--- a/packages.config
+++ b/packages.config
@@ -17,6 +17,7 @@
   <package id="Protobuf.Text" version="0.4.0" targetFramework="net472" />
   <package id="Serilog" version="2.5.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
+  <package id="stateless" version="5.11.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="4.4.0" targetFramework="net472" />
